fixed board dimension on tablet 2048

--- a/src/components/games/2048/styles.module.scss
+++ b/src/components/games/2048/styles.module.scss
@@ -34,7 +34,7 @@
   transform: scale(0);
 }
 
-@media screen and (width >= 640px) {
+@media screen and (width >= 1024px) {
   .gameBoard {
     --tile-size: 18vh;
     --tile-gap: 1vh;
